--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -2,56 +2,58 @@ name: Docker Image CI
 on:
   push:
     branches:
-      - dev
+      - dev*
       - master
+    tags:
+      - v*
 env:
   IMAGE_NAME: centos-7-perl
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
       - uses: actions/checkout@v2
-      - name: Print greeting
+      - name: Say hello
         env:
           TARGET: world
         run: |
-          echo "Hello, $TARGET!"
-      - name: Build the Docker image
-        #run: docker build . --file Dockerfile --tag centos-7-perl:$(date +%s)
-        run: docker build . --file Dockerfile
-      - name: Create timestamp file
+          echo "Hello, $TARGET! (building ${IMAGE_NAME})"
+      - name: Create timestamp-raw.txt
         run: date > timestamp-raw.txt
       - name: Store timestamp artifact
         uses: actions/upload-artifact@v1
         with:
           name: timestamp
           path: timestamp-raw.txt
-  push:
-    runs-on: ubuntu-latest
-    needs: build
-    timeout-minutes: 10
-    steps:
-      - uses: actions/checkout@v2
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag image
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
-      - name: Push image
+      - name: Push image to GitHub
         run: |
           IMAGE_ID=docker.pkg.github.com/${{ github.repository }}/$IMAGE_NAME
-          # Strip git ref prefix from version
-          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-          # Strip "v" prefix from tag name
-          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-          # Use Docker `latest` tag convention
-          [ "$VERSION" == "master" ] && VERSION=latest
+          GITHUB_REF=$(echo "${{ github.ref }}")
+          # Extract branch/tag name
+          FINAL_SEGMENT=$(echo $GITHUB_REF | sed -e 's,.*/\(.*\),\1,')
+          if [ "$GITHUB_REF" == "refs/tags/"* ] ; then
+            echo called due to TAG push
+            # Strip "v" prefix from tag name
+            VERSION=$(echo $FINAL_SEGMENT | sed -e 's/^v//')
+            docker tag image $IMAGE_ID:$VERSION
+            # assume any tag push should also become "latest"
+            docker tag image $IMAGE_ID:latest
+            docker push $IMAGE_ID:$VERSION $IMAGE_ID:latest
+          else
+            echo called due to BRANCH push
+            VERSION=$FINAL_SEGMENT
+            docker tag image $IMAGE_ID:$VERSION
+            docker push $IMAGE_ID:$VERSION
+          fi
           echo IMAGE_ID=$IMAGE_ID
           echo VERSION=$VERSION
-          docker tag image $IMAGE_ID:$VERSION
-          docker push $IMAGE_ID:$VERSION
       - name: Say goodbye
         env:
           TARGET: world
         run: |
-          echo "Goodbye, $TARGET!"
+          echo "Goodbye, $TARGET! (building ${IMAGE_NAME})"
